# dialog-analysis

./: .gitignore  LICENSE  pyproject.toml
src/: config.env
src/ml/: relations_model.py  summarization_model.py  test.py  test2.py  test3.py
src/model_name/: main.py  relations_model.py  summarization_model.py  test.py
src/telegram_bot/: batching.py  bot.py
src/telegram_bot/handlers/: analysis.py  clear.py  query.py  start.py
src/telegram_bot/middlewares/: ml.py  model.py
src/tg_bot/: batching.py  bot.py
src/tg_bot/handlers/: analysis.py  query.py  start.py  summary.py
src/translator/: translate.py
